fix/frontend: * fixed sizes categories card on mobile

--- a/frontend/src/components/common/preferences-modal/styles.module.scss
+++ b/frontend/src/components/common/preferences-modal/styles.module.scss
@@ -126,7 +126,7 @@
   overflow: unset;
 
   @media screen and (max-width: 600px) {
-    height: max-content;
+    height: 150px;
   }
 
   img {
@@ -191,7 +191,7 @@
   justify-items: center;
   align-items: center;
   grid-gap: 20px;
-  width: 1100px;
+  width: 890px;
   overflow-x: hidden;
   overflow-y: auto;
 
